istio/service-entry-loki.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: loki
spec:
  hosts:
  - loki-gateway.logging
  ports:
  - number: 80
    name: loki
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
