istio/service-entry-rabbitmq.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rabbitmq
spec:
  hosts:
  - rabbitmq.messaging
  ports:
  - number: 5672
    name: loki
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
